fix to navbar options stacked too much for mobile layout.

--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    flex-basis: 50%;
+    flex-basis: 66%;
     align-content: flex-start;
 }
 
